MOD: Small CSS changes in the HTML page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-BR">
 <head>
 	<title>nicholasalmeida.com</title>
-	<meta name="author" content="Nicholas Almeida - nicholasalmeida.com"/>
+	<meta name="author" content="Nicholas Almeida - nicholasalmeida.com" />
+	<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' />
+	<link rel="stylesheet" href="assets/css/normalize.css" type="text/css" media="screen" />
+	
+	<style type="text/css" media="screen">
+		h1 {
+			font-family: 'Helvetica Neue', Helvetica, Arial, sans;
+		}
+		p {
+			font-family: 'Inconsolata', sans-serif;
+			color: #333;
+			font-size: .95em;
+		}
+		.container {
+			margin: 0 0 0 20px;
+		}
+	</style>
 </head>
 <body>
 	
 	<div class="container">
 		<h1>nicholasalmeida.com</h1>
 	</div>
+
 </body>
 </html>
